--- a/assets/templates/crypto-b/templates/about.html
+++ b/assets/templates/crypto-b/templates/about.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
-  <header class="page-header">
+  <header class="page-header  page-header--blue">
     <div class="page-header__head">
       <nav class="page-header__nav">
         <div class="container">
@@ -41,19 +41,12 @@
     <div class="container">
       <div class="page-header__rules">
         <h1>About Us</h1>
-        <p>Cryptologic is a multi-functional digital currency exchange that is highly trust worthy. It offers a cross-platform trading via website, mobile application, web socket and API providing accesss to high liquidity orderbook for top currency pairs on the market. Very fast Bitcoin buying and selling is possible through simplified bundle interface. The exchange has developed a multi-level account system with individual approach to each customer, from Bitcoin learner to institutional professional traders.</p>
-        <p>With cryptologic you get worldwide coverage, mulitiple payement options, and 24/7 support accompanied by time-proven platform stability that guarantees safty of assets and data. We provide all individuals and businesses a  world class experience to trade Bitcoin and other crypto currencies. Cryptologic is absolutely the go-to site for traders and investors when you demand a quick trade transaction, stable wallets and advanced security practices. Cryptologic is the right place to be!</p>
+        <p>Cryptologic is a multi-functional digital currency exchange that is highly trust worthy. It offers a cross-platform trading via website,<br>mobile application, web socket and API providing accesss to high liquidity orderbook for top currency pairs on the market.<br>Very fast Bitcoin buying and selling is possible through simplified bundle interface. The exchange has developed a multi-level account<br>system with individual approach to each customer, from Bitcoin learner to institutional professional traders.</p>
+        <p class="page-header--pb">With cryptologic you get worldwide coverage, mulitiple payement options, and 24/7 support accompanied by time-proven platform<br>stability that guarantees safty of assets and data. We provide all individuals and businesses a  world class experience to trade Bitcoin<br>and other crypto currencies. Cryptologic is absolutely the go-to site for traders and investors when you demand a quick trade transaction,<br>stable wallets and advanced security practices. Cryptologic is the right place to be!</p>
       </div>
     </div>
   </header>
-  <!-- <main class="page-main">
-    <div class="container">
-      <h1>About Us</h1>
-      <p>Cryptologic is a multi-functional digital currency exchange that is highly trust worthy. It offers a cross-platform trading via website, mobile application, web socket and API providing accesss to high liquidity orderbook for top currency pairs on the market. Very fast Bitcoin buying and selling is possible through simplified bundle interface. The exchange has developed a multi-level account system with individual approach to each customer, from Bitcoin learner to institutional professional traders.</p>
-      <p>With cryptologic you get worldwide coverage, mulitiple payement options, and 24/7 support accompanied by time-proven platform stability that guarantees safty of assets and data. We provide all individuals and businesses a  world class experience to trade Bitcoin and other crypto currencies. Cryptologic is absolutely the go-to site for traders and investors when you demand a quick trade transaction, stable wallets and advanced security practices. Cryptologic is the right place to be!</p>
-    </div>
-  </main> -->
-  <footer class="page-footer">
+  <footer class="page-footer  page-footer--up">
     <div class="container">
       <div class="page-footer__flex">
         <div class="page-footer__column">
@@ -66,7 +59,7 @@
         <div class="page-footer__column">
           <b>About</b>
           <ul>
-            <li><a class="page-footer--active">About Us</a></li>
+            <li class="page-footer--active"><a>About Us</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="privacy.html">Legal & Privacy</a></li>
             <li><a href="terms.html">Terms & Conditions</a></li>
