--- a/assets/templates/crypto-b/templates/trading.html
+++ b/assets/templates/crypto-b/templates/trading.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
-  <header class="page-header">
+  <header class="page-header  page-header--blue">
     <div class="page-header__head">
       <nav class="page-header__nav">
         <div class="container">
@@ -39,56 +39,36 @@
       </nav>
     </div>
     <div class="container">
-      <div class="page-header__form">
-        <form action="">
-          <input type="text" placeholder="First Name" required>
-          <input type="text" placeholder="Last Name" required>
-          <input type="email" placeholder="E-Mail" required>
-          <input type="tel" placeholder="Phone" required>
-          <select>
-            <option>-Select Country-</option>
-            <option>Test</option>
-          </select>
-          <div class="page-header__checkbox">
-            <input type="checkbox" id="check">
-            <label for="check">I confirm I am over 18 years old<br>and that I have read, understood<br>and accept <a href="#">The Terms and<br>Conditions apply</a>.</label>
-          </div>
-          <input type="submit" value="Register Now">
-          <p>training involves significant risk of loss</p>
-        </form>
+      <div class="page-header__rules">
+        <h1>Trading Guide</h1>
+        <b>Bitcoin Trading</b>
+        <p>Cryptologic is a trusted platform for trading Bitcoins. The exchange provides fast order execution, low spread,<br>and access to high liquidity orderbook for top currency pairs on the market. Cross-platform trading is realised via website,<br>mobile app, and several API solutions. Safety of assets and data are backed by high security standards and advanced legal compliance.</p>
+        <p>To start trading on Cryptologic follow the steps</p>
+        <b>Sign up with Cryptologic</b>
+        <p>It will take you only a few steps to register and get an account on Cryptologic Bitcoin exchange.</p>
+        <b>Deposit funds</b>
+        <p>Fund account with your payment card or via bank transfer. We accept VISA and MasterCard.</p>
+        <b>Start trading</b>
+        <p>Trade Bitcoin via website interface, mobile app or using automated trading solutions.</p>
+        <b>Commission</b>
+        <p>Cryptologic exchange charges variable commissions of 0% to 0.2%, depending on the trading pair.<br>Special conditions are discussable for high-volume traders. Volume-based trade fees are coming soon.</p>
+        <b>Cryptologic API</b>
+        <p>Cryptologic provides several API solutions for automated trading based on needs of individuals and institutions.<br>REST API is a basic tool for quick access to Cryptologic market data and automated trade management.<br>WebSocket API with full trading functionality is mainly used by professional traders.<br>Finally, FIX API is the best solution for institutional traders to connect trading systems to a source of Bitcoin liquidity.</p>
+        <b>Key Advantages</b>
+        <ul>
+          <li>safe cryptocurrency cold storage and financial viability</li>
+          <li>high liquidity orderbook and low spread</li>
+          <li>advanced order-matching algorithms</li>
+          <li>cross-platform trading via website, mobile app and API</li>
+          <li>easy deposits and guaranteed withdrawals</li>
+          <li>advanced and transparent reporting</li>
+          <li>professional 24/7 support team</li>
+        </ul>
+        <p class="page-header--pb">START TRADING!</p>
       </div>
     </div>
   </header>
-  <main class="page-main">
-    <div class="container">
-      <h1>Trading Guide</h1>
-      <b>Bitcoin Trading</b>
-      <p>Cryptologic is a trusted platform for trading Bitcoins. The exchange provides fast order execution, low spread,<br>and access to high liquidity orderbook for top currency pairs on the market. Cross-platform trading is realised via website,<br>mobile app, and several API solutions. Safety of assets and data are backed by high security standards and advanced legal compliance.</p>
-      <p>To start trading on Cryptologic follow the steps</p>
-      <b>Sign up with Cryptologic</b>
-      <p>It will take you only a few steps to register and get an account on Cryptologic Bitcoin exchange.</p>
-      <b>Deposit funds</b>
-      <p>Fund account with your payment card or via bank transfer. We accept VISA and MasterCard.</p>
-      <b>Start trading</b>
-      <p>Trade Bitcoin via website interface, mobile app or using automated trading solutions.</p>
-      <b>Commission</b>
-      <p>Cryptologic exchange charges variable commissions of 0% to 0.2%, depending on the trading pair.<br>Special conditions are discussable for high-volume traders. Volume-based trade fees are coming soon.</p>
-      <b>Cryptologic API</b>
-      <p>Cryptologic provides several API solutions for automated trading based on needs of individuals and institutions.<br>REST API is a basic tool for quick access to Cryptologic market data and automated trade management.<br>WebSocket API with full trading functionality is mainly used by professional traders.<br>Finally, FIX API is the best solution for institutional traders to connect trading systems to a source of Bitcoin liquidity.</p>
-      <b>Key Advantages</b>
-      <ul>
-        <li>* safe cryptocurrency cold storage and financial viability</li>
-        <li>* high liquidity orderbook and low spread</li>
-        <li>* advanced order-matching algorithms</li>
-        <li>* cross-platform trading via website, mobile app and API</li>
-        <li>* easy deposits and guaranteed withdrawals</li>
-        <li>* advanced and transparent reporting</li>
-        <li>* professional 24/7 support team</li>
-      </ul>
-      <p class="page-main--pb">START TRADING</p>
-    </div>
-  </main>
-  <footer class="page-footer">
+  <footer class="page-footer  page-footer--up">
     <div class="container">
       <div class="page-footer__flex">
         <div class="page-footer__column">
@@ -112,7 +92,7 @@
           <ul>
             <li><a href="faq.com">FAQ</a></li>
             <li><a href="#">Support</a></li>
-            <li><a class="page-footer--active">Trading Guide</a></li>
+            <li class="page-footer--active"><a>Trading Guide</a></li>
           </ul>
         </div>
         <!-- <div class="page-footer__column">
