--- a/assets/templates/crypto-b/templates/faq.html
+++ b/assets/templates/crypto-b/templates/faq.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
-  <header class="page-header">
+  <header class="page-header  page-header--blue">
     <div class="page-header__head">
       <nav class="page-header__nav">
         <div class="container">
@@ -39,48 +39,28 @@
       </nav>
     </div>
     <div class="container">
-      <div class="page-header__form">
-        <form action="">
-          <input type="text" placeholder="First Name" required>
-          <input type="text" placeholder="Last Name" required>
-          <input type="email" placeholder="E-Mail" required>
-          <input type="tel" placeholder="Phone" required>
-          <select>
-            <option>-Select Country-</option>
-            <option>Test</option>
-          </select>
-          <div class="page-header__checkbox">
-            <input type="checkbox" id="check">
-            <label for="check">I confirm I am over 18 years old<br>and that I have read, understood<br>and accept <a href="#">The Terms and<br>Conditions apply</a>.</label>
-          </div>
-          <input type="submit" value="Register Now">
-          <p>training involves significant risk of loss</p>
-        </form>
+      <div class="page-header__rules">
+        <h1>Faq</h1>
+        <b>How do I cancel an order?</b>
+        <p>To cancel an open order, first make sure you're viewing the market on which your order was placed (e.g. BTC-USD, LTC-BTC, etc). Your open orders will be listed in the Open Orders panel in the lower middle of the trading dashboard. Hover the order that you desire to cancel and click the "cancel" to the right hand side of the order.</p>
+        <b>Do you allow VPN/Tor connections?</b>
+        <p>Yes we do, however for best performance of the cryptologic web interface and API we recommend using a good and fast connection.</p>
+        <b>Can I trade on margin?</b>
+        <p>Currently Margin trading is disabled. Please subscribe to our blog for more updates.</p>
+        <b>What is a limit order?</b>
+        <p>Placing a limit order lets you decide what price you wish to buy or sell at. Your order will be added to the order book and will execute when someone submits a matching order.</p>
+        <b>What is the order book?</b>
+        <p>The order book is a list of all open (unfilled) buy and sell orders. You can buy or sell digital currency at any price listed.</p>
+        <b>Why is my order stuck as an open order?</b>
+        <p>Newly placed orders first enter the order book as an "open order". When some of your "open order" matches with another order, it becomes a "partially matched order". When all of your order matches with another user's order, it becomes a "fully matched order" or "completed order". Completed orders are removed from the order book.</p>
+        <b>Is there a fee to transfer funds to and from Cryptologic?</b>
+        <p>Cryptologic does not charge any transfer fees for moving funds between your Coinbase account and Cryptologic account.</p>
+        <b>Why is my "available" balance less than my total?</b>
+        <p class="page-header--pb">You have open orders. The funds used to place your orders are considered to be on hold and not part of your available balance.</p>
       </div>
     </div>
   </header>
-  <main class="page-main">
-    <div class="container">
-      <h1>Faq</h1>
-      <b>How do I cancel an order?</b>
-      <p>To cancel an open order, first make sure you're viewing the market on which your order was placed (e.g. BTC-USD, LTC-BTC, etc). Your open orders will be listed in the Open Orders panel in the lower middle of the trading dashboard. Hover the order that you desire to cancel and click the "cancel" to the right hand side of the order.</p>
-      <b>Do you allow VPN/Tor connections?</b>
-      <p>Yes we do, however for best performance of the cryptologic web interface and API we recommend using a good and fast connection.</p>
-      <b>Can I trade on margin?</b>
-      <p>Currently Margin trading is disabled. Please subscribe to our blog for more updates.</p>
-      <b>What is a limit order?</b>
-      <p>Placing a limit order lets you decide what price you wish to buy or sell at. Your order will be added to the order book and will execute when someone submits a matching order.</p>
-      <b>What is the order book?</b>
-      <p>The order book is a list of all open (unfilled) buy and sell orders. You can buy or sell digital currency at any price listed.</p>
-      <b>Why is my order stuck as an open order?</b>
-      <p>Newly placed orders first enter the order book as an "open order". When some of your "open order" matches with another order, it becomes a "partially matched order". When all of your order matches with another user's order, it becomes a "fully matched order" or "completed order". Completed orders are removed from the order book.</p>
-      <b>Is there a fee to transfer funds to and from Cryptologic?</b>
-      <p>Cryptologic does not charge any transfer fees for moving funds between your Coinbase account and Cryptologic account.</p>
-      <b>Why is my "available" balance less than my total?</b>
-      <p class="page-main--pb">You have open orders. The funds used to place your orders are considered to be on hold and not part of your available balance.</p>
-    </div>
-  </main>
-  <footer class="page-footer">
+  <footer class="page-footer  page-footer--up">
     <div class="container">
       <div class="page-footer__flex">
         <div class="page-footer__column">
@@ -102,7 +82,7 @@
         <div class="page-footer__column">
           <b>Resources</b>
           <ul>
-            <li><a class="page-footer--active">FAQ</a></li>
+            <li class="page-footer--active"><a>FAQ</a></li>
             <li><a href="#">Support</a></li>
             <li><a href="trading.html">Trading Guide</a></li>
           </ul>
