--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -1147,6 +1147,7 @@ form p {
 
 .coin {
   min-height: 140px;
+  margin-top: -9px;
   background: url("../img/bit.png") no-repeat center;
   background-size: cover; }
 
