--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -23,8 +23,8 @@
             <div class="page-header__main-nav">
               <ul class="page-header__nav-list">
                 <li class="page-header__item"><a href="#">Login</a></li>
+                <li class="page-header__item"><a href="#">Sign Up</a></li>
                 <li class="page-header__item"><a href="#">Contacts</a></li>
-                <li class="page-header__item"><a href="#">Live Chat</a></li>
               </ul>
             </div>
             <div class="page-header__main-nav  page-header__main-nav--s">
