--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -114,6 +114,9 @@ select {
 form p {
   text-align: center; }
 
+.test-h {
+  display: none; }
+
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
   .page-header__form {
