--- a/assets/templates/crypto-b/sass/global/form.scss
+++ b/assets/templates/crypto-b/sass/global/form.scss
@@ -84,6 +84,10 @@ form p {
   text-align: center;
 }
 
+.test-h {
+  display: none;
+}
+
 // Media
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width : 320px) and (max-width : 480px) {    
