--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -22,8 +22,8 @@
             </div>
             <div class="page-header__main-nav">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="#">Login</a></li>
-                <li class="page-header__item"><a href="#">Sign Up</a></li>
+                <li class="page-header__item"><a href="#" class="page-header__login">Login</a></li>
+                <li class="page-header__item"><a href="#" class="page-header__sign-up">Sign Up</a></li>
                 <li class="page-header__item"><a href="#">Contacts</a></li>
               </ul>
             </div>
@@ -40,7 +40,7 @@
     </div>
     <div class="container">
       <div class="page-header__form">
-        <form action="">
+        <form action="" class="page-header__form--sign-up">
           <input type="text" placeholder="First Name" required>
           <input type="text" placeholder="Last Name" required>
           <input type="email" placeholder="E-Mail" required>
@@ -326,6 +326,11 @@
           </div>
           <input type="submit" value="Register Now">
           <p>Trading involves significant risk of loss</p>
+        </form>
+        <form action="" class="page-header__form--login">
+          <input type="email" placeholder="E-Mail" required>
+          <input type="password" placeholder="Password" required>
+          <input type="submit" value="Sign In">
         </form>
       </div>
     </div>
