--- a/assets/templates/crypto/template/trading.html
+++ b/assets/templates/crypto/template/trading.html
@@ -33,31 +33,33 @@
   </header>
   <main class="page-main  page-main--trading">
     <div class="container">
-      <h1>Trading Guide</h1>
-      <p class="page-main__legal--title">Bitcoin Trading</p>
-      <p>Cryptologic is a trusted platform for trading Bitcoins. The exchange provides fast order execution, low spread,<br>and access to high liquidity orderbook for top currency pairs on the market. Cross-platform trading is realised via website,<br>mobile app, and several API solutions. Safety of assets and data are backed by high security standards and advanced legal compliance.</p>
-      <p>To start trading on Cryptologic follow the steps</p>
-      <p class="page-main__legal--title">Sign up with Cryptologic</p>
-      <p>It will take you only a few steps to register and get an account on Cryptologic Bitcoin exchange.</p>
-      <p class="page-main__legal--title">Deposit funds</p>
-      <p>Fund account with your payment card or via bank transfer. We accept VISA and MasterCard.</p>
-      <p class="page-main__legal--title">Start trading</p>
-      <p>Trade Bitcoin via website interface, mobile app or using automated trading solutions.</p>
-      <p class="page-main__legal--title">Commission</p>
-      <p>Cryptologic exchange charges variable commissions of 0% to 0.2%, depending on the trading pair.<br>Special conditions are discussable for high-volume traders. Volume-based trade fees are coming soon.</p>
-      <p class="page-main__legal--title">Cryptologic API</p>
-      <p>Cryptologic provides several API solutions for automated trading based on needs of individuals and institutions.<br>REST API is a basic tool for quick access to Cryptologic market data and automated trade management.<br>WebSocket API with full trading functionality is mainly used by professional traders.<br>Finally, FIX API is the best solution for institutional traders to connect trading systems to a source of Bitcoin liquidity.</p>
-      <p class="page-main__legal--title">Key Advantages</p>
-      <ul>
-        <li>* safe cryptocurrency cold storage and financial viability</li>
-        <li>* high liquidity orderbook and low spread</li>
-        <li>* advanced order-matching algorithms</li>
-        <li>* cross-platform trading via website, mobile app and API</li>
-        <li>* easy deposits and guaranteed withdrawals</li>
-        <li>* advanced and transparent reporting</li>
-        <li>* professional 24/7 support team</li>
-      </ul>
-      <p class="page-main--pb">START TRADING</p>
+      <div class="container__adv">
+        <h1>Trading Guide</h1>
+        <p class="page-main__legal--title">Bitcoin Trading</p>
+        <p>Cryptologic is a trusted platform for trading Bitcoins. The exchange provides fast order execution, low spread,<br>and access to high liquidity orderbook for top currency pairs on the market. Cross-platform trading is realised via website,<br>mobile app, and several API solutions. Safety of assets and data are backed by high security standards and advanced legal compliance.</p>
+        <p>To start trading on Cryptologic follow the steps</p>
+        <p class="page-main__legal--title">Sign up with Cryptologic</p>
+        <p>It will take you only a few steps to register and get an account on Cryptologic Bitcoin exchange.</p>
+        <p class="page-main__legal--title">Deposit funds</p>
+        <p>Fund account with your payment card or via bank transfer. We accept VISA and MasterCard.</p>
+        <p class="page-main__legal--title">Start trading</p>
+        <p>Trade Bitcoin via website interface, mobile app or using automated trading solutions.</p>
+        <p class="page-main__legal--title">Commission</p>
+        <p>Cryptologic exchange charges variable commissions of 0% to 0.2%, depending on the trading pair.<br>Special conditions are discussable for high-volume traders. Volume-based trade fees are coming soon.</p>
+        <p class="page-main__legal--title">Cryptologic API</p>
+        <p>Cryptologic provides several API solutions for automated trading based on needs of individuals and institutions.<br>REST API is a basic tool for quick access to Cryptologic market data and automated trade management.<br>WebSocket API with full trading functionality is mainly used by professional traders.<br>Finally, FIX API is the best solution for institutional traders to connect trading systems to a source of Bitcoin liquidity.</p>
+        <p class="page-main__legal--title">Key Advantages</p>
+        <ul>
+          <li>* safe cryptocurrency cold storage and financial viability</li>
+          <li>* high liquidity orderbook and low spread</li>
+          <li>* advanced order-matching algorithms</li>
+          <li>* cross-platform trading via website, mobile app and API</li>
+          <li>* easy deposits and guaranteed withdrawals</li>
+          <li>* advanced and transparent reporting</li>
+          <li>* professional 24/7 support team</li>
+        </ul>
+        <p class="page-main--pb">START TRADING</p>
+      </div>
     </div>
   </main>
   <footer class="page-footer">
