--- a/assets/templates/crypto/template/terms.html
+++ b/assets/templates/crypto/template/terms.html
@@ -33,69 +33,71 @@
   </header>
   <main class="page-main  page-main--terms">
     <div class="container">
-      <h1>Terms & Condition</h1>
-      <p>General</p>
-      <ul>
-        <li>Only one account is allowed per person.</li>
-        <li>The information contained on this website does not constitute accounting, legal, financial, consulting investment or other professional advice. You bear all the risks from any decision to hold, purchase or sell bitcoin on this website and Luno will not be liable for any loss suffered.</li>
-        <li>You agree that you will not use the products and services to facilitate any illegal activities.</li>
-        <li>You agree that you will not use the products and services to engage in any activites listed on the Prohibited Activities list</li>
-        <li>Your account may be terminated if you provide false information or refuse to provide information about your true identity.</li>
-        <li>You agree and consent to receive communications from Luno via email and SMS.</li>
-        <li>Cryptologic may change the Terms of Use at any time for any reason without notice.</li>
-      </ul>
-      <p>Cryptologic Wallet</p>
-      <ul>
-        <li>The Bitcoin network is responsible for confirming Bitcoin transactions and Cryptologic is not liable for any loss due to, but not limited to, errors in the protocol, delays or any other breakdown relating to the Bitcoin network.</li>
-        <li>You acknowledge that cryptologic cannot confirm, cancel or reverse Bitcoin transactions.</li>
-        <li>You expressly agree that cryptologic is not liable for any errors, loss or omissions due to sending Bitcoin to or receiving Bitcoin from incorrect wallet addresses, e-mail addresses, entering incorrect transaction amounts, or any other information related to Bitcoin transactions by using the service. Please ensure that you use the correct Bitcoin addresses, e-mail addresses, transaction amounts when transacting.</li>
-        <li>Bitcoin is securely stored in a combination of online and offline storage. As a result it may take up to 48 hours or more to facilitate Bitcoin transactions. By using cryptologic you accept the risk that transactions may be delayed and you agree not to hold cryptologic liable for any damages or loss due to delays.</li>
-      </ul>
-      <p>Cryptologic Exchange</p>
-      <ul>
-        <li>You must be at least 18 years old to use trade on the exchange.</li>
-        <li>Any information that you provide must be true, accurate and correct.</li>
-        <li>You must be resident in one of our supported countries to register and use the service.</li>
-        <li>You acknowledge that trading Bitcoin involves large risks and could result in significant financial losses.</li>
-        <li>Cryptologic does not accept cash payments. Cash deposits to our bank account may be delayed and will incur additional processing fees.</li>
-        <li>Incoming payments to cryptologic must be done by means of electronic funds transfer (EFT) from your bank account in your country of residence. The bank account must be opened in your own name.</li>
-        <li>Outgoing payments from cryptologic can only be done by means of electronic funds transfer (EFT) to your confirmed bank account in your country of residence. The bank account must be opened in your own name.</li>
-        <li>Cryptologic does not guarantee Bitcoin or bank transfer disbursement times and will not be liable for any delays.</li>
-        <li>You must provide security for trading Bitcoin by funding your account in advance of trading.</li>
-        <li>Trade orders placed on the site are binding and cannot be cancelled or reversed.</li>
-        <li>Cryptologic has no obligation to accept orders, in which case the site will not allow the order to be placed.</li>
-        <li>Orders, deposits and withdrawals are subject to limits which may be changed over time.</li>
-        <li>Cryptologic may suspend your account at any time for any reason.</li>
-        <li>This service is provided without warranty of any kind and Cryptologic does not guarantee that the site will be available 100% of the time. You acknowledge and accept that the website may become unavailable from time to time due to various circumstances and that Cryptologic will not be liable for any losses due to the system or service becoming unavailable.</li>
-        <li>Cryptologic cannot and does not guarantee the value of Bitcoin and has no obligation to buy back Bitcoin at any time.</li>
-        <li>It is your responsibility to determine, account and pay for any taxes that apply to your trading and Bitcoin transactions.</li>
-      </ul>
-      <p>Prohibited Activities</p>
-      <p class="page-main__title-ul">You may not use Cryptologic products or services to engage in any of the following activities:</p>
-      <ul>
-        <li>Violation of any laws, statutes, ordinances or regulations.</li>
-        <li>Paying into or otherwise supporting pyramid schemes, Ponzi schemes, matrix programs, "get rich quick" schemes, multi-level marketing programs or high-yield investment programs (HYIP).</li>
-        <li>Transactions involving:
-          <ul>
-            <li>Narcotics, steroids, drugs or other controlled substances</li>
-            <li>Drug paraphernalia</li>
-            <li>Items that promote or facilitate illegal activity</li>
-            <li>Stolen goods</li>
-            <li>Items that promote or facilitate hate, violence or racial intolerance</li>
-            <li>Items that are considered obscene</li>
-            <li>Items that are counterfeit or otherwise infringe or violate copyright, trademarks or other intellectual property</li>
-            <li>Ammunition, firearms or other weapons that require licensing</li>
-            <li>Sale of personal information</li>
-            <li>Prostitution or illegal escort services</li>
-            <li>Extortion or blackmail</li>
-          </ul>
-        </li>
-      </ul>
-      <p class="page-main__title-ul">You may not use Cryptologic products or services to engage in any of the following activities unless pre-approved by Cryptologic:</p>
-      <ul class="page-main--pb">
-        <li>Operating as a money transmitter, payment service provider, e-money or any other financial service business.</li>
-        <li>Offering gambling or gaming services.</li>
-      </ul>
+      <div class="container__adv">
+        <h1>Terms & Condition</h1>
+        <p>General</p>
+        <ul>
+          <li>Only one account is allowed per person.</li>
+          <li>The information contained on this website does not constitute accounting, legal, financial, consulting investment or other professional advice. You bear all the risks from any decision to hold, purchase or sell bitcoin on this website and Luno will not be liable for any loss suffered.</li>
+          <li>You agree that you will not use the products and services to facilitate any illegal activities.</li>
+          <li>You agree that you will not use the products and services to engage in any activites listed on the Prohibited Activities list</li>
+          <li>Your account may be terminated if you provide false information or refuse to provide information about your true identity.</li>
+          <li>You agree and consent to receive communications from Luno via email and SMS.</li>
+          <li>Cryptologic may change the Terms of Use at any time for any reason without notice.</li>
+        </ul>
+        <p>Cryptologic Wallet</p>
+        <ul>
+          <li>The Bitcoin network is responsible for confirming Bitcoin transactions and Cryptologic is not liable for any loss due to, but not limited to, errors in the protocol, delays or any other breakdown relating to the Bitcoin network.</li>
+          <li>You acknowledge that cryptologic cannot confirm, cancel or reverse Bitcoin transactions.</li>
+          <li>You expressly agree that cryptologic is not liable for any errors, loss or omissions due to sending Bitcoin to or receiving Bitcoin from incorrect wallet addresses, e-mail addresses, entering incorrect transaction amounts, or any other information related to Bitcoin transactions by using the service. Please ensure that you use the correct Bitcoin addresses, e-mail addresses, transaction amounts when transacting.</li>
+          <li>Bitcoin is securely stored in a combination of online and offline storage. As a result it may take up to 48 hours or more to facilitate Bitcoin transactions. By using cryptologic you accept the risk that transactions may be delayed and you agree not to hold cryptologic liable for any damages or loss due to delays.</li>
+        </ul>
+        <p>Cryptologic Exchange</p>
+        <ul>
+          <li>You must be at least 18 years old to use trade on the exchange.</li>
+          <li>Any information that you provide must be true, accurate and correct.</li>
+          <li>You must be resident in one of our supported countries to register and use the service.</li>
+          <li>You acknowledge that trading Bitcoin involves large risks and could result in significant financial losses.</li>
+          <li>Cryptologic does not accept cash payments. Cash deposits to our bank account may be delayed and will incur additional processing fees.</li>
+          <li>Incoming payments to cryptologic must be done by means of electronic funds transfer (EFT) from your bank account in your country of residence. The bank account must be opened in your own name.</li>
+          <li>Outgoing payments from cryptologic can only be done by means of electronic funds transfer (EFT) to your confirmed bank account in your country of residence. The bank account must be opened in your own name.</li>
+          <li>Cryptologic does not guarantee Bitcoin or bank transfer disbursement times and will not be liable for any delays.</li>
+          <li>You must provide security for trading Bitcoin by funding your account in advance of trading.</li>
+          <li>Trade orders placed on the site are binding and cannot be cancelled or reversed.</li>
+          <li>Cryptologic has no obligation to accept orders, in which case the site will not allow the order to be placed.</li>
+          <li>Orders, deposits and withdrawals are subject to limits which may be changed over time.</li>
+          <li>Cryptologic may suspend your account at any time for any reason.</li>
+          <li>This service is provided without warranty of any kind and Cryptologic does not guarantee that the site will be available 100% of the time. You acknowledge and accept that the website may become unavailable from time to time due to various circumstances and that Cryptologic will not be liable for any losses due to the system or service becoming unavailable.</li>
+          <li>Cryptologic cannot and does not guarantee the value of Bitcoin and has no obligation to buy back Bitcoin at any time.</li>
+          <li>It is your responsibility to determine, account and pay for any taxes that apply to your trading and Bitcoin transactions.</li>
+        </ul>
+        <p>Prohibited Activities</p>
+        <p class="page-main__title-ul">You may not use Cryptologic products or services to engage in any of the following activities:</p>
+        <ul>
+          <li>Violation of any laws, statutes, ordinances or regulations.</li>
+          <li>Paying into or otherwise supporting pyramid schemes, Ponzi schemes, matrix programs, "get rich quick" schemes, multi-level marketing programs or high-yield investment programs (HYIP).</li>
+          <li>Transactions involving:
+            <ul>
+              <li>Narcotics, steroids, drugs or other controlled substances</li>
+              <li>Drug paraphernalia</li>
+              <li>Items that promote or facilitate illegal activity</li>
+              <li>Stolen goods</li>
+              <li>Items that promote or facilitate hate, violence or racial intolerance</li>
+              <li>Items that are considered obscene</li>
+              <li>Items that are counterfeit or otherwise infringe or violate copyright, trademarks or other intellectual property</li>
+              <li>Ammunition, firearms or other weapons that require licensing</li>
+              <li>Sale of personal information</li>
+              <li>Prostitution or illegal escort services</li>
+              <li>Extortion or blackmail</li>
+            </ul>
+          </li>
+        </ul>
+        <p class="page-main__title-ul">You may not use Cryptologic products or services to engage in any of the following activities unless pre-approved by Cryptologic:</p>
+        <ul class="page-main--pb">
+          <li>Operating as a money transmitter, payment service provider, e-money or any other financial service business.</li>
+          <li>Offering gambling or gaming services.</li>
+        </ul>
+      </div>
     </div>
   </main>
   <footer class="page-footer">
