--- a/assets/templates/crypto-b/templates/terms.html
+++ b/assets/templates/crypto-b/templates/terms.html
@@ -22,15 +22,15 @@
             </div>
             <div class="page-header__main-nav">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="#">Login</a></li>
-                <li class="page-header__item"><a href="#">Sign Up</a></li>
+                <li class="page-header__item"><a href="../index.html">Login</a></li>
+                <li class="page-header__item"><a href="../index.html">Sign Up</a></li>
                 <li class="page-header__item"><a href="#">Contacts</a></li>
               </ul>
             </div>
             <div class="page-header__main-nav  page-header__main-nav--s">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="#">Login</a></li>
-                <li class="page-header__item"><a href="#">Sign Up</a></li>
+                <li class="page-header__item"><a href="../index.html">Login</a></li>
+                <li class="page-header__item"><a href="../index.html">Sign Up</a></li>
                 <li class="page-header__item"><a href="#">Contacts</a></li>
               </ul>
             </div>
