--- a/assets/templates/crypto/template/faq.html
+++ b/assets/templates/crypto/template/faq.html
@@ -33,7 +33,7 @@
   </header>
   <main class="page-main  page-main--faq">
     <div class="container">
-      <div class="container__adv">
+      <div class="container__adv  container__adv--pm">
         <h1>Faq</h1>
         <p class="page-main__title">How do I cancel an order?</p>
         <p>To cancel an open order, first make sure you're viewing the market on which your order was placed (e.g. BTC-USD, LTC-BTC, etc). Your open orders will be listed in the Open Orders panel in the lower middle of the trading dashboard. Hover the order that you desire to cancel and click the "cancel" to the right hand side of the order.</p>
