--- a/assets/templates/crypto/template/legal.html
+++ b/assets/templates/crypto/template/legal.html
@@ -33,7 +33,7 @@
   </header>
   <main class="page-main page-main--legal">
     <div class="container">
-      <div class="container__adv">
+      <div class="container__adv  container__adv--pm">
         <h1>Privacy Policy</h1>
         <div class="page-main__left">
           <p class="page-main__legal--title">HOW WE COLLECT INFORMATION ABOUT YOU</p>
