--- a/assets/templates/crypto/template/trading.html
+++ b/assets/templates/crypto/template/trading.html
@@ -33,7 +33,7 @@
   </header>
   <main class="page-main  page-main--trading">
     <div class="container">
-      <div class="container__adv">
+      <div class="container__adv  container__adv--pm">
         <h1>Trading Guide</h1>
         <p class="page-main__legal--title">Bitcoin Trading</p>
         <p>Cryptologic is a trusted platform for trading Bitcoins. The exchange provides fast order execution, low spread,<br>and access to high liquidity orderbook for top currency pairs on the market. Cross-platform trading is realised via website,<br>mobile app, and several API solutions. Safety of assets and data are backed by high security standards and advanced legal compliance.</p>
