--- a/assets/templates/crypto/template/terms.html
+++ b/assets/templates/crypto/template/terms.html
@@ -33,7 +33,7 @@
   </header>
   <main class="page-main  page-main--terms">
     <div class="container">
-      <div class="container__adv">
+      <div class="container__adv  container__adv--pm">
         <h1>Terms & Condition</h1>
         <p>General</p>
         <ul>
