--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -15,8 +15,8 @@
       <div class="page-header__flex-container">
         <div class="page-header__logo">
           <a href="index.html">
-            <img class="page-header__logo-full" src="img/logo.png" alt="CryptoLogic">
-            <img class="page-header__logo-s" src="img/logo-s.png" alt="CryptoLogic">
+            <img class="page-header__logo-full" src="img/n-logo.png" alt="CryptoLogic">
+            <img class="page-header__logo-s" src="img/n-logo.png" alt="CryptoLogic">
           </a>
         </div>
         <div class="page-header__menu">
