--- a/assets/templates/crypto/template/trading.html
+++ b/assets/templates/crypto/template/trading.html
@@ -15,7 +15,7 @@
       <div class="page-header__flex-container">
         <div class="page-header__logo">
           <a href="../index.html">
-            <img class="page-header__logo-full" src="../img/logo.png" alt="CryptoLogic">
+            <img class="page-header__logo-full" src="../img/n-logo.png" alt="CryptoLogic">
             <img class="page-header__logo-s" src="../img/logo-s.png" alt="CryptoLogic">
           </a>
         </div>
