--- a/assets/templates/crypto/template/faq.html
+++ b/assets/templates/crypto/template/faq.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>FAQ - Cryptologic</title>
+  <title>FAQ - Cryptologi</title>
   <link rel="stylesheet" href="../css/custom.css">
   <link rel="stylesheet" href="../css/adaptive.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
@@ -15,7 +15,7 @@
       <div class="page-header__flex-container">
         <div class="page-header__logo">
           <a href="../index.html">
-            <img class="page-header__logo-full" src="../img/n-logo.png" alt="CryptoLogic">
+            <img class="page-header__logo-full" src="../img/n-logo.png" alt="CryptoLogi">
           </a>
         </div>
         <div class="page-header__menu">
@@ -37,7 +37,7 @@
         <p class="page-main__title">How do I cancel an order?</p>
         <p>To cancel an open order, first make sure you're viewing the market on which your order was placed (e.g. BTC-USD, LTC-BTC, etc). Your open orders will be listed in the Open Orders panel in the lower middle of the trading dashboard. Hover the order that you desire to cancel and click the "cancel" to the right hand side of the order.</p>
         <p class="page-main__title">Do you allow VPN/Tor connections?</p>
-        <p>Yes we do, however for best performance of the cryptologic web interface and API we recommend using a good and fast connection.</p>
+        <p>Yes we do, however for best performance of the cryptologi web interface and API we recommend using a good and fast connection.</p>
         <p class="page-main__title">Can I trade on margin?</p>
         <p>Currently Margin trading is disabled. Please subscribe to our blog for more updates.</p>
         <p class="page-main__title">What is a limit order?</p>
@@ -46,8 +46,8 @@
         <p>The order book is a list of all open (unfilled) buy and sell orders. You can buy or sell digital currency at any price listed.</p>
         <p class="page-main__title">Why is my order stuck as an open order?</p>
         <p>Newly placed orders first enter the order book as an "open order". When some of your "open order" matches with another order, it becomes a "partially matched order". When all of your order matches with another user's order, it becomes a "fully matched order" or "completed order". Completed orders are removed from the order book.</p>
-        <p class="page-main__title">Is there a fee to transfer funds to and from Cryptologic?</p>
-        <p>Cryptologic does not charge any transfer fees for moving funds between your Coinbase account and Cryptologic account.</p>
+        <p class="page-main__title">Is there a fee to transfer funds to and from Cryptologi?</p>
+        <p>Cryptologi does not charge any transfer fees for moving funds between your Coinbase account and Cryptologi account.</p>
         <p class="page-main__title">Why is my "available" balance less than my total?</p>
         <p class="page-main--pb">You have open orders. The funds used to place your orders are considered to be on hold and not part of your available balance.</p>
       </div>
