--- a/assets/templates/crypto/template/form.html
+++ b/assets/templates/crypto/template/form.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Login - CryptoLogic</title>
+  <title>Login - CryptoLogi</title>
   <link rel="stylesheet" href="../css/custom.css">
   <link rel="stylesheet" href="../css/adaptive.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
@@ -12,9 +12,9 @@
 <body class="form__body">
   <section class="modal-login">
     <div class="container">
-      <h1><a href="../index.html">CryptoLogic</a></h1>
+      <h1><a href="../index.html">CryptoLogi</a></h1>
       <div class="login">
-        <h2>Sign up to <span>CryptoLogic</span></h2>
+        <h2>Sign up to <span>CryptoLogi</span></h2>
         <form class="form  modal-login__form" action="index.html" method="post">
           <div class="form__name">
             <label for="name">Name</label>
