--- a/assets/templates/crypto/template/support.html
+++ b/assets/templates/crypto/template/support.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Support - Cryptologic</title>
+  <title>Support - Cryptologi</title>
   <link rel="stylesheet" href="../css/custom.css">
   <link rel="stylesheet" href="../css/adaptive.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
@@ -15,7 +15,7 @@
       <div class="page-header__flex-container">
         <div class="page-header__logo">
           <a href="../index.html">
-            <img class="page-header__logo-full" src="../img/n-logo.png" alt="CryptoLogic">
+            <img class="page-header__logo-full" src="../img/n-logo.png" alt="CryptoLogi">
           </a>
         </div>
         <div class="page-header__menu">
