--- a/assets/templates/crypto/template/trading.html
+++ b/assets/templates/crypto/template/trading.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Trading - Cryptologic</title>
+  <title>Trading - Cryptologi</title>
   <link rel="stylesheet" href="../css/custom.css">
   <link rel="stylesheet" href="../css/adaptive.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
@@ -15,7 +15,7 @@
       <div class="page-header__flex-container">
         <div class="page-header__logo">
           <a href="../index.html">
-            <img class="page-header__logo-full" src="../img/n-logo.png" alt="CryptoLogic">
+            <img class="page-header__logo-full" src="../img/n-logo.png" alt="CryptoLogi">
           </a>
         </div>
         <div class="page-header__menu">
@@ -35,18 +35,18 @@
       <div class="container__adv  container__adv--pm">
         <h1>Trading Guide</h1>
         <p class="page-main__legal--title">Bitcoin Trading</p>
-        <p>Cryptologic is a trusted platform for trading Bitcoins. The exchange provides fast order execution, low spread,<br>and access to high liquidity orderbook for top currency pairs on the market. Cross-platform trading is realised via website,<br>mobile app, and several API solutions. Safety of assets and data are backed by high security standards and advanced legal compliance.</p>
-        <p>To start trading on Cryptologic follow the steps</p>
-        <p class="page-main__legal--title">Sign up with Cryptologic</p>
-        <p>It will take you only a few steps to register and get an account on Cryptologic Bitcoin exchange.</p>
+        <p>Cryptologi is a trusted platform for trading Bitcoins. The exchange provides fast order execution, low spread,<br>and access to high liquidity orderbook for top currency pairs on the market. Cross-platform trading is realised via website,<br>mobile app, and several API solutions. Safety of assets and data are backed by high security standards and advanced legal compliance.</p>
+        <p>To start trading on Cryptologi follow the steps</p>
+        <p class="page-main__legal--title">Sign up with Cryptologi</p>
+        <p>It will take you only a few steps to register and get an account on Cryptologi Bitcoin exchange.</p>
         <p class="page-main__legal--title">Deposit funds</p>
         <p>Fund account with your payment card or via bank transfer. We accept VISA and MasterCard.</p>
         <p class="page-main__legal--title">Start trading</p>
         <p>Trade Bitcoin via website interface, mobile app or using automated trading solutions.</p>
         <p class="page-main__legal--title">Commission</p>
-        <p>Cryptologic exchange charges variable commissions of 0% to 0.2%, depending on the trading pair.<br>Special conditions are discussable for high-volume traders. Volume-based trade fees are coming soon.</p>
-        <p class="page-main__legal--title">Cryptologic API</p>
-        <p>Cryptologic provides several API solutions for automated trading based on needs of individuals and institutions.<br>REST API is a basic tool for quick access to Cryptologic market data and automated trade management.<br>WebSocket API with full trading functionality is mainly used by professional traders.<br>Finally, FIX API is the best solution for institutional traders to connect trading systems to a source of Bitcoin liquidity.</p>
+        <p>Cryptologi exchange charges variable commissions of 0% to 0.2%, depending on the trading pair.<br>Special conditions are discussable for high-volume traders. Volume-based trade fees are coming soon.</p>
+        <p class="page-main__legal--title">Cryptologi API</p>
+        <p>Cryptologi provides several API solutions for automated trading based on needs of individuals and institutions.<br>REST API is a basic tool for quick access to Cryptologi market data and automated trade management.<br>WebSocket API with full trading functionality is mainly used by professional traders.<br>Finally, FIX API is the best solution for institutional traders to connect trading systems to a source of Bitcoin liquidity.</p>
         <p class="page-main__legal--title">Key Advantages</p>
         <ul>
           <li>* safe cryptocurrency cold storage and financial viability</li>
