--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>CryptoLogic</title>
+  <title>CryptoLogi</title>
   <link rel="stylesheet" href="css/custom.css">
   <link rel="stylesheet" href="css/adaptive.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
@@ -15,7 +15,7 @@
       <div class="page-header__flex-container">
         <div class="page-header__logo">
           <a href="index.html">
-            <img class="page-header__logo-full" src="img/n-logo.png" alt="CryptoLogic">
+            <img class="page-header__logo-full" src="img/n-logo.png" alt="CryptoLogi">
           </a>
         </div>
         <div class="page-header__menu">
@@ -34,8 +34,8 @@
     <div class="container">
       <div class="container__adv">
         <div class="flex-btn">
-          <h1 class="info__title">Cryptologic the science of<br>trading cryptocurrency</h1>
-          <p class="info__text">Cryptologic presents investors a unique opportunity<br>to trade or exchange digital assets<br>with ease on a 24/7 basic.</p>
+          <h1 class="info__title">Cryptologi the science of<br>trading cryptocurrency</h1>
+          <p class="info__text">Cryptologi presents investors a unique opportunity<br>to trade or exchange digital assets<br>with ease on a 24/7 basic.</p>
           <a class="info__link" href="template/form.html">Create Account</a>
         </div>
       </div>
@@ -51,13 +51,13 @@
             <a class="open-1" href="#">Read More</a>
           </div>
           <div class="read__more">
-            <b>WHY CRYPTOLOGIC<br>IS UNIQUE? </b>
-            <p class="read__more--link2">Сryptologic is a super world class trading platform that offers a very unique interface with real time updates about different digital currencies, charting tools, various trade histories...<span class="hide-2">Cryptologic is very easy to understand and use. When trading with cryptologic, you are sure to maximize profits. On here peer-to-peer funding is carried out easily and swiftly. All transactions are 100% secured. you can start trading from the very first day.</span></p>
+            <b>WHY CRYPTOLOGI<br>IS UNIQUE? </b>
+            <p class="read__more--link2">Сryptologic is a super world class trading platform that offers a very unique interface with real time updates about different digital currencies, charting tools, various trade histories...<span class="hide-2">Cryptologi is very easy to understand and use. When trading with cryptologi, you are sure to maximize profits. On here peer-to-peer funding is carried out easily and swiftly. All transactions are 100% secured. you can start trading from the very first day.</span></p>
             <a class="open-2" href="#">Read More</a>
           </div>
           <div class="read__more">
             <b>LEARN HOW<br>TO TRADE</b>
-            <p class="read__more--link3">Trading with cryptologic gives you full access to numerous professional Bitcoin traders you can learn from...<span class="hide-3">We have a live trading page where you can easily get access to market trends and updates, with very good documented and precise video tutorials on how to trade. Cryptologic also offers its clients a demo account to help them practice the act of trading and become good at it.</span></p>
+            <p class="read__more--link3">Trading with cryptologi gives you full access to numerous professional Bitcoin traders you can learn from...<span class="hide-3">We have a live trading page where you can easily get access to market trends and updates, with very good documented and precise video tutorials on how to trade. Cryptologi also offers its clients a demo account to help them practice the act of trading and become good at it.</span></p>
             <a class="open-3" href="#">Read More</a>
           </div>
         </div>
@@ -96,7 +96,7 @@
     <div class="container">
       <h2 class="trading__title">Trading on the go</h2>
       <div class="trading__flex-container">
-        <p class="trading__text">Cryptologic provides the possibility to trade Bitcoin or any other digital currency from your pc, tablet or mobile device. This is as a result of our multifaceted design interface. You can follow the market trends and get interesting live updates on the go. On here you can manage your portfolio wherever you are. Trade today with cryptologic and move on the path to success.</p>
+        <p class="trading__text">Cryptologi provides the possibility to trade Bitcoin or any other digital currency from your pc, tablet or mobile device. This is as a result of our multifaceted design interface. You can follow the market trends and get interesting live updates on the go. On here you can manage your portfolio wherever you are. Trade today with cryptologi and move on the path to success.</p>
       </div>
       <div class="trading__flex-container  trading__flex-container--m">
         <a class="info__link  info__link--red" href="template/form.html">Create Account</a>
@@ -141,13 +141,13 @@
   <section class="fly">
     <div class="container">
       <h2>Fly above<br>the clouds<br>of success</h2>
-      <p class="fly__text">Buy, sell and trade Bitcoin<br>with cryptologic</p>
-      <p class="fly__desc">This platform was intended for professional and success motivated traders of bitcoin. The security of cryptologic is impeccable. Bank relationships are very good and peer-to-peer transfer can be carried out fast and with ease. On here profits are multiplied with Bitcoin margin trading, and you can leverage long or short bitcoin positions.</p>
+      <p class="fly__text">Buy, sell and trade Bitcoin<br>with cryptologi</p>
+      <p class="fly__desc">This platform was intended for professional and success motivated traders of bitcoin. The security of cryptologi is impeccable. Bank relationships are very good and peer-to-peer transfer can be carried out fast and with ease. On here profits are multiplied with Bitcoin margin trading, and you can leverage long or short bitcoin positions.</p>
     </div>
   </section>
   <section class="pre-footer">
     <div class="container">
-      <h2>Cryptologic is a full-featured, on spot trading platform for digital currencies such as Bitcoin, Ethereum, Litcoin, and many more others. Peer-to-peer funding is carried out easily and swiftly. All transactions are 100% secured. Sign up today!</h2>
+      <h2>Cryptologi is a full-featured, on spot trading platform for digital currencies such as Bitcoin, Ethereum, Litcoin, and many more others. Peer-to-peer funding is carried out easily and swiftly. All transactions are 100% secured. Sign up today!</h2>
     </div>
   </section>
   <footer class="page-footer">
