--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -52,7 +52,7 @@
           </div>
           <div class="read__more">
             <b>WHY CRYPTOLOGI<br>IS UNIQUE? </b>
-            <p class="read__more--link2">Сryptologic is a super world class trading platform that offers a very unique interface with real time updates about different digital currencies, charting tools, various trade histories...<span class="hide-2">Cryptologi is very easy to understand and use. When trading with cryptologi, you are sure to maximize profits. On here peer-to-peer funding is carried out easily and swiftly. All transactions are 100% secured. you can start trading from the very first day.</span></p>
+            <p class="read__more--link2">Сryptologi is a super world class trading platform that offers a very unique interface with real time updates about different digital currencies, charting tools, various trade histories...<span class="hide-2">Cryptologi is very easy to understand and use. When trading with cryptologi, you are sure to maximize profits. On here peer-to-peer funding is carried out easily and swiftly. All transactions are 100% secured. you can start trading from the very first day.</span></p>
             <a class="open-2" href="#">Read More</a>
           </div>
           <div class="read__more">
